<resources>
    <!-- Menus -->
    <string name="app_name">Pill Notifier</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="save">Save</string>
    <string name="pref_notifications_sound">Sound select</string>
    <string name="pref_notifications_sound_active">Emit sound on notification</string>
    <string name="pref_notifications_vibrate_active">Vibrate on notification</string>
    <string name="pref_notifications">Notifications</string>
    <string name="circle">Circle</string>
    <string name="exit">Exit</string>

    <!-- Notifications -->
    <string name="channel_name">Pill Notifier</string>
    <string name="channel_description">Pill notifications</string>
    <string name="accept">Accept</string>
    <string name="snooze">Snooze</string>
    <string name="pill_notification_title">Pill notification</string>
    <string name="pill_notification_text">It is time to take your pill…</string>
    <string name="next" translatable="false">next</string>
    <string name="days_with">Number of days with</string>
    <string name="days_without">Number of days without</string>
    <string name="use_date">First use date</string>
    <string name="use_time">Notification time</string>
</resources>
